Fixed navbar on small screens. Added navbar icons

--- a/static/styles2.css
+++ b/static/styles2.css
@@ -35,19 +35,39 @@ default font size 16px
     .nav-list {
         width: 100%;
         background-color: #fff;
-        padding: 0 0 !important;
+        padding: 0 1.5rem 0 0 !important;
         margin: auto auto 0 auto;
     }
     .nav-list li{
-        height: 5rem;
+        height: 3rem;
         display: inline-block;
+        padding-left: 1.5rem;
     }
     .nav-list li a {
         padding-left: 2.5rem;
-        font-size: 1.2rem;
+        font-size: 1em;
     }
     #dashboard-header-div {
         margin-left: -1.4rem !important;
+    }
+    .dashboard-btn {
+        width: 3rem !important;
+        height: 3rem !important;
+        border-radius: 50% !important;
+    }
+    .dashboard-btn a {
+        display: none;
+    }
+    #changeColor {
+        margin: 0 1.5rem 0 auto;
+    }
+    @media (max-width: 380px) {
+        .nav-list li {
+            padding-left: 1rem;
+        }
+        .nav-list li a {
+            padding-left: 1.5rem;
+        }
     }
 }
 
@@ -138,7 +158,7 @@ main {
 }
 
 .nav-list {
-    padding-top: 5em;
+    padding-top: 2em;
     list-style: none;
 }
 
@@ -147,7 +167,7 @@ main {
 }
 
 .nav-links {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: black;
     text-decoration: none;
 }
